# ros2

./: .gitignore  README.md  model_training_process_story.md
gazebo-ros2/: TODO.md  (+1 more)
graduation-prj/pingpong_rl2/: README.md  pyproject.toml
graduation-prj/pingpong_rl2/archive/: README.md
graduation-prj/pingpong_rl2/assets/franka/: panda.xml  panda_racket_outward.xml
graduation-prj/pingpong_rl2/configs/: keep1_v32_17d_transfer.json  pmk_cf_self_rally_v25_long_horizon_30_bounce.json  pmk_cf_self_rally_v28_robot_base_disk_curriculum.json  pmk_cf_self_rally_v29_first_contact_chase_sector.json  pmk_cf_self_rally_v29_racket_tracking_staged_distribution.json  pmk_cf_self_rally_v30_v26_wider_xy_stability.json
graduation-prj/pingpong_rl2/docs/: heuristic_bootstrap_audit.md  model_evolution_to_v39.md  python_code_map.md
graduation-prj/pingpong_rl2/scripts/: benchmark_vector_env.py  expand_ppo_action_space.py  run_bounce_sanity.py  run_contact_feasibility_map.py  run_heuristic_keepup_diagnostic.py  run_material_sanity.py  run_ppo_evaluation.py  run_ppo_learning.py  run_ppo_rebound_analysis.py  run_viewer.py
graduation-prj/pingpong_rl2/tests/: test_keepup_contract_features.py  test_keepup_env.py  test_ppo_runs.py  test_scene_load.py
graduation-prj/pingpong_rl3/: README.md  pyproject.toml
graduation-prj/pingpong_rl3/assets/: scene.xml
graduation-prj/pingpong_rl3/configs/: keep2_v1.json  keep2_v2_staggered.json  keep2_v3_lift_recovery.json
graduation-prj/pingpong_rl3/scripts/: analyze.py  train.py  viewer.py
graduation-prj/pingpong_rl3/tests/: test_env_smoke.py
(+330 files in other folders)
